Исправил тестовые классы (исключил дублирование id при работе postman)